src/test/ui/iterators/string.stderr
error[E0277]: `String` cannot be converted to an iterator
  --> $DIR/string.rs:2:14
   |
LL |     for _ in "".to_owned() {}
   |              ^^^^^^^^^^^^^ cannot implicitly convert `String` to an iterator; try calling `.chars()` or `.bytes()`
   |
   = help: the trait `IntoIterator` is not implemented for `String`

error[E0277]: `&str` cannot be converted to an iterator
  --> $DIR/string.rs:4:14
   |
LL |     for _ in "" {}
   |              ^^ cannot implicitly convert `&str` to an iterator; try calling `.chars()` or `.bytes()`
   |
   = help: the trait `IntoIterator` is not implemented for `&str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
